<resources>
    <string name="app_name">Hackucsc</string>
    <string name="breakfastButton">Breakfast</string>
    <string name="lunchButton">Lunch</string>
    <string name="dinnerButton">Dinner</string>
    <string name="settingsButton">Settings</string>
    <string name="viewAlert">Receive alerts:</string>
    <string name="alertMM">Meatless Monday</string>
    <string name="alertFF">Farm Friday</string>
    <string name="ratingView">Rating:</string>
    <string name="ratingText">Rating:</string>
    <string name="submitButton">Submit</string>
</resources>
