<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sjdeuces.hackucsc.SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/viewAlert"
        android:id="@+id/alertsView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/alertMM"
        android:id="@+id/mmAlert"
        android:layout_above="@+id/ffAlert"
        android:layout_alignLeft="@+id/alertsView"
        android:layout_alignStart="@+id/alertsView"
        android:layout_marginBottom="54dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/alertFF"
        android:id="@+id/ffAlert"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/mmAlert"
        android:layout_alignStart="@+id/mmAlert"
        android:layout_alignParentEnd="false" />

</RelativeLayout>
